--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,6 @@ on:
       - "2[0-9].[0-3]" # 20.0 -> 29.3
       - "2[0-9].[0-3].[0-9]+" # 20.0.0 -> 29.3.[0-9]+
   pull_request:
-  schedule:
-    - cron: 0 0 * * MON # Run every Monday at 00:00 UTC
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
@@ -22,7 +20,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: MatteoH2O1999/setup-python@v1
         with:
           python-version: "3.x"
       - run: pip install nox
@@ -58,7 +56,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: MatteoH2O1999/setup-python@v1
         with:
           python-version: "3.x"
       - name: Set up git credentials
@@ -82,7 +80,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: MatteoH2O1999/setup-python@v1
         with:
           python-version: "3.x"
 
@@ -112,7 +110,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: MatteoH2O1999/setup-python@v1
         with:
           python-version: ${{ matrix.python }}
 
@@ -163,7 +161,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: MatteoH2O1999/setup-python@v1
         with:
           python-version: ${{ matrix.python }}
 
@@ -214,7 +212,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: MatteoH2O1999/setup-python@v1
         with:
           python-version: "3.10"
 
