--- a/.github/workflows/update-rtd-redirects.yml
+++ b/.github/workflows/update-rtd-redirects.yml
@@ -3,8 +3,6 @@ name: Update documentation redirects
 on:
   push:
     branches: [main]
-  schedule:
-    - cron: 0 0 * * MON # Run every Monday at 00:00 UTC
 
 env:
   FORCE_COLOR: "1"
@@ -19,7 +17,7 @@ jobs:
     environment: RTD Deploys
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: MatteoH2O1999/setup-python@v1
         with:
           python-version: "3.11"
       - run: pip install httpx pyyaml rich
